--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 phases:
   install:
-    runtime-version:
+    runtime-versions:
       ruby: 2.6
     commands:
       - bundle install
